objects/CMPL123CME__MDR_Code__c.object
<CustomObject>
    <description>Junction object between MDR and Complaint Code object</description>
    <fields>
        <fullName>CMPL123CME__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluation Code</fullName>
                </value>
                <value>
                    <fullName>Event Problem Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Complaint_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint Code</label>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>MDR Codes</relationshipLabel>
        <relationshipName>MDR_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__EMDR_MDR_CODE_DESCRIPTION__c</fullName>
        <formula>CMPL123CME__Complaint_Code__r.CMPL123CME__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMDR MDR Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__EMDR_MDR_CODE_SECONDARY__c</fullName>
        <formula>CMPL123CME__Complaint_Code__r.CMPL123CME__Secondary_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMDR MDR CODE SECONDARY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__EMDR_MDR_CODE_TYPE__c</fullName>
        <formula>TEXT(CMPL123CME__Complaint_Code__r.CMPL123CME__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMDR MDR CODE TYPE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__EMDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EMDR</label>
        <referenceTo>CMPL123CME__EMDR__c</referenceTo>
        <relationshipLabel>MDR Codes</relationshipLabel>
        <relationshipName>MDR_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__MDR_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDR Report</label>
        <referenceTo>CMPL123CME__MDR__c</referenceTo>
        <relationshipLabel>MDR Codes</relationshipLabel>
        <relationshipName>MDR_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__VMSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link MDR Code to VMSR.</description>
        <inlineHelpText>Link MDR Code to VMSR.</inlineHelpText>
        <label>VMSR</label>
        <referenceTo>CMPL123CME__EMDR__c</referenceTo>
        <relationshipLabel>VMSR Codes</relationshipLabel>
        <relationshipName>VMSR_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MDR Code</label>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <columns>CMPL123CME__Complaint_Code__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__EMDR_MDR_CODE_TYPE__c</columns>
        <columns>CMPL123CME__EMDR_MDR_CODE_SECONDARY__c</columns>
        <columns>CMPL123CME__EMDR_MDR_CODE_DESCRIPTION__c</columns>
        <columns>CMPL123CME__MDR_Report__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SL No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDR Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>